solved issue title collapses on specific resolution

--- a/src/components/Landing/Features/Feature.scss
+++ b/src/components/Landing/Features/Feature.scss
@@ -17,6 +17,8 @@
     font-size: 1.6rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
+    white-space: nowrap;
+    text-overflow: ellipsis;
   }
 
   @media only screen and (max-width: 1400px) {
