--- a/src/components/Landing/Header/HeaderTitle.scss
+++ b/src/components/Landing/Header/HeaderTitle.scss
@@ -40,6 +40,8 @@
   text-transform: uppercase;
   font-size: 5rem;
   letter-spacing: 2.5rem;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 
   &--main {
     display: inline-block;
